# housing_data_exploration

./: Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  readme.md
docs/: _config.yml
notebooks/: housing_data_demo.ipynb
tests/: test_housing_data_exploration.py
