[tool.poetry]
name = "housing_data_exploration"
version = "0.1.0"
description = "Exploration of housing data for prototype week."
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
data_common = { path = "src/data_common/", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poetry.scripts]
notebook = 'housing_data_exploration.cli:main'

[notebook.settings]
default_page_title = "Settings file defined title"